--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "travis:coverage": "npm run test:coverage -- --runInBand",
     "appveyor:test": "npm run test",
     "webpack-defaults": "webpack-defaults",
-    "postinstall": "npm run build"
+    "postinstall": "npm install && npm run build"
   },
   "dependencies": {
     "cacache": "^9.2.9",
